--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ pandas = "^1.3.4"
 numpy = "^1.21.3"
 plotly = "^5.3.1"
 
-mlflow = "^1.21.0"
+mlflow = "==1.14.1"    #"==1.20.1"   # 1.14.1
 azure-storage-blob = "==12.7.1"
 azure-identity ="^1.7.0"
 
