--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pyarrow = "^6.0.0"
 sklearn = ">=0.0"
 
 python-dotenv = "^0.19.1"
+dash-core-components = "^2.0.0"
+dash = "^2.0.0"
 
 
 [tool.poetry.dev-dependencies]
