[HK] house keeping

--- a/how_to_dump_MLFlow_models/dump_mlflow_model_config.yaml
+++ b/how_to_dump_MLFlow_models/dump_mlflow_model_config.yaml
@@ -6,4 +6,6 @@ local_path: "/home/heiko/Repos/SKlearn_to_MLFLow/model_dump"
 
 model_list: 
   - "dashapp_model"
+  - "MFI_polymer"
+  - "CI_polymer"
 
