[HK] some clean up for tutorial

--- a/how_to_dump_MLFlow_models/dump_mlflow_model_config.yaml
+++ b/how_to_dump_MLFlow_models/dump_mlflow_model_config.yaml
@@ -5,7 +5,8 @@
 local_path: "/home/heiko/Repos/SKlearn_to_MLFLow/model_dump"
 
 model_list: 
-  - "dashapp_model"
-  - "MFI_polymer"
-  - "CI_polymer"
+  - "chemical_model"
+  # - "dashapp_model"
+  # - "MFI_polymer"
+  # - "CI_polymer"
 
